Some Fixes
Completely redid navigation so its not screwed up, but its less responsive and spread out now. fixed some issues about overlapping text in meet the team file, but i need to probably change all that to column so i can actually center them. added sections for social media links and episodes on the home page. formatted some of the submissions page so the form looks better.

--- a/css/episodesCss.css
+++ b/css/episodesCss.css
@@ -6,8 +6,8 @@ body{
 #navDiv{
     width: 100%;
     height: 80px;
-    text-align: center;
     padding-top: 10px;
+    text-align: center;
 }
 
 /*Unordered list containing the navigation tab info*/
@@ -15,19 +15,20 @@ body{
     list-style: none;
     white-space: nowrap;
     padding: 0;
-    margin-left: 8%;
 }
 
 /*Divs for the individual tab items on the nav bar*/
 .navItemDiv{
     display: inline;
-    margin-right: 10%;
+    width: 200px;
+    margin: 60px;
 }
 
 /*List items for the individual tabs on the navigation*/
 .navTabLI{
     display: inline;
     white-space: nowrap;
+    text-align: center;
 }
 
 /*Links for the navigation tab pages*/
